--- a/31-holidays.qmd
+++ b/31-holidays.qmd
@@ -7,6 +7,11 @@ source("_common.R")
 status("polishing", "2023-03-24", section = "Holidays")  # drafting, polishing, complete
 ```
 
+```{r, echo=FALSE}
+library(tidyverse, quietly = TRUE)
+library(tsbox, quietly = TRUE)
+```
+
 ```{=html}
 <!--
 -   Why should we adjust for holiday effects
@@ -86,6 +91,65 @@ summary(m_easter_8)
 Not surprisingly, the 8 day Easter model has a lower AICc than the one day model.
 This is why the one day model has been chosen in the beginning.
 
+Including holiday effects can have a dramatic effect on a final seasonal adjustment.
+Consider the monthly retail sales from Hobby, toy, and game stores.
+The data can be found at the [US Census Time Series repository](https://www.census.gov/econ/currentdata/?programCode=MARTS&startYear=1992&endYear=2023&categories[]=44X72&dataType=SM&geoLevel=US&adjusted=1&notAdjusted=1&errorData=0).
+
+```{r, echo=FALSE}
+hobby_toy_game <- 
+structure(c(620L, 585L, 643L, 706L, 660L, 721L, 678L, 653L, 638L, 
+789L, 1332L, 3226L, 598L, 576L, 683L, 735L, 685L, 722L, 745L, 
+682L, 671L, 799L, 1480L, 3275L, 618L, 637L, 819L, 782L, 742L, 
+758L, 778L, 801L, 806L, 987L, 1677L, 3445L, 683L, 665L, 823L, 
+867L, 821L, 873L, 851L, 846L, 846L, 993L, 1830L, 3616L, 705L, 
+737L, 890L, 862L, 669L, 849L, 877L, 874L, 870L, 1094L, 2002L, 
+4073L, 730L, 791L, 1032L, 896L, 947L, 940L, 963L, 958L, 971L, 
+1141L, 2009L, 3643L, 858L, 883L, 987L, 1022L, 986L, 1016L, 1042L, 
+1025L, 1005L, 1197L, 2011L, 3801L, 933L, 966L, 1135L, 1076L, 
+1061L, 1101L, 1083L, 1101L, 1111L, 1277L, 2096L, 3711L, 893L, 
+1002L, 1106L, 1136L, 1072L, 1098L, 1124L, 1132L, 1175L, 1285L, 
+2161L, 3763L, 880L, 971L, 1176L, 1063L, 1038L, 1107L, 1094L, 
+1065L, 1050L, 1303L, 2445L, 3628L, 896L, 966L, 1186L, 1014L, 
+1078L, 1065L, 1103L, 1087L, 1048L, 1347L, 2468L, 3651L, 910L, 
+940L, 1111L, 1139L, 1088L, 1064L, 1094L, 1087L, 1095L, 1286L, 
+2223L, 3545L, 962L, 1045L, 1125L, 1082L, 974L, 1024L, 1086L, 
+1016L, 1051L, 1311L, 2187L, 3451L, 950L, 980L, 1173L, 1098L, 
+1061L, 1049L, 1077L, 1028L, 1019L, 1229L, 2120L, 3471L, 1063L, 
+1022L, 1117L, 1094L, 1040L, 1048L, 1070L, 1043L, 1086L, 1205L, 
+1933L, 3299L, 948L, 974L, 1188L, 1064L, 1050L, 1096L, 1102L, 
+1084L, 1102L, 1275L, 2208L, 3253L, 1043L, 1077L, 1183L, 1080L, 
+1131L, 1044L, 1097L, 1065L, 1061L, 1218L, 1959L, 3117L, 1031L, 
+1009L, 1095L, 1086L, 1064L, 1020L, 1058L, 1007L, 1063L, 1194L, 
+1842L, 2999L, 953L, 1000L, 1155L, 1059L, 1030L, 1024L, 1070L, 
+1039L, 1074L, 1254L, 1990L, 3064L, 967L, 1023L, 1193L, 1184L, 
+1065L, 1061L, 1082L, 1067L, 1143L, 1243L, 1951L, 3033L, 1063L, 
+1182L, 1259L, 1146L, 1175L, 1120L, 1113L, 1117L, 1148L, 1263L, 
+1929L, 2963L, 1019L, 1068L, 1239L, 1107L, 1116L, 1057L, 1106L, 
+1145L, 1161L, 1338L, 2134L, 3263L, 1012L, 1084L, 1213L, 1195L, 
+1170L, 1084L, 1183L, 1185L, 1253L, 1360L, 2140L, 3511L, 1157L, 
+1190L, 1360L, 1260L, 1274L, 1196L), .Tsp = c(1992, 2015.41666666667, 
+12), class = "ts")
+```
+```{r}
+ts_plot(hobby_toy_game, title = "Hobby, Toy and Game store monthly sales")
+```
+We can perform a seasonal adjustment on this series with and without the Easter[8] regressor.
+
+```{r}
+m0 <- seas(hobby_toy_game, x11 = "", regression = NULL, outlier = NULL)
+m1 <- seas(hobby_toy_game, x11 = "", regression.variables = "Easter[8]", outlier = NULL)
+ts_dygraphs(
+  ts_c(
+    hobby_toy_game, SA_noEaster = final(m0), SA_withEaster = final(m1)
+  )
+)
+```
+
+Notice the large differences during certain Easter periods. 
+For example, the final seasonally adjusted series including an Easter regressor in April 2011 was 1360.52.
+The final seasonally adjusted values without an Easter regressor was 1449.3, a difference of 89 million dollars which is over 7.5% difference from of the original series value. 
+
+
 ## Case Study: Chinese New Year
 
 The Lunar New Year is the most important holiday in China and many other Asian countries.
@@ -108,6 +172,7 @@ Chinese imports are included as an example series in seasonal, both with and wit
 
 ```{r }
 library(tsbox)
+imp_cn <- imp
 ts_plot(imp_cn)
 ```
 
