--- a/31-holidays.qmd
+++ b/31-holidays.qmd
@@ -91,8 +91,8 @@ m_easter_8 <- seas(AirPassengers, regression.variables = "easter[8]")
 summary(m_easter_8)
 ```
 
-Not surprisingly, the 8 day Easter model has a lower AICc than the one day model.
-This is why the one day model has been chosen in the beginning.
+Surprisingly, the 8 day Easter model has a lower AICc than the one day model.
+This opens the question why the one day model has been chosen in the beginning.
 
 Including holiday effects can have a dramatic effect on a final seasonal adjustment.
 Consider the monthly retail sales from Hobby, toy, and game stores.
