--- a/34-seasonal-breaks.qmd
+++ b/34-seasonal-breaks.qmd
@@ -6,9 +6,59 @@
 source("_common.R")
 status("drafting")  # drafting, polishing, complete
 ```
-
+<!--
 -   Why to care about seasonal breaks?
 
 -   Detection of seasonal breaks
 
 -   Correction for seasonal breaks
+
+ -->
+
+
+Some series have seasonal breaks. Apart from visual inspection of the unadjusted series, a look at monthplot() is usually helpful. If there are seasonal breaks, this leads to a jump in the SI ratio.
+
+
+## Case Study: Imports of Goods to China
+
+We previously used the imports of goods to China, as series that seem to have a pretty obvious seasonal break.
+
+Chinese imports are included as an example series in seasonal, both with and without the official seasonal adjustment.
+
+```{r }
+library(tsbox)
+stopifnot(packageVersion("seasonalbook") >= "0.0.2")
+library(seasonalbook)
+library(seasonal)
+
+ts_plot(imp_cn)
+```
+
+
+The series has a very different seasonal pattern before 2000.
+In our previous example, we simply cut the data and focused on the later period.
+
+
+```{r }
+ts_span(imp_cn, start = 2000)
+```
+
+Back then, we said that adjusting the whole series in one step is possible, but for good results one should manually model the seasonal break. Let's do this now.
+
+### Identifying a seasonal break
+
+In part, the seasonal break is visible in the series. It is more straigthforward to spot in the monthplot of the series:
+
+
+```{r }
+monthplot(seas(imp_cn))
+```
+This makes it obvious that there were very strong December effects before 2000. We don't know anything about the series, but we can speculate thatprior to 2000, custom receipts were counted when they were handed in (at the end of the year), rather than at the date of import.
+
+```{r }
+summary(seas(imp_cn, regression.variables = "seasonal/2000.jan//"))
+```
+
+A formal test of a seasonal break can be performed by including `regression.variables = "seasonal/1999.jan//"` into the specification. By default, seasonal outliers are removed from the final series. Therefore, this can be used to model a seasonal break. Modeling a seasonal break is usually preferable to a separation of the time series in two parts.
+
+
